Add additional dependencies to requirements.txt

--- a/hackathon@Beagle/requirements.txt
+++ b/hackathon@Beagle/requirements.txt
@@ -8,3 +8,23 @@ folium
 branca
 pyproj
 streamlit-folium
+python-dotenv
+scipy
+tqdm
+joblib
+lightgbm
+torch
+scikit-learn
+rtree
+networkx
+fiona
+matplotlib
+google-generativeai
+vertexai
+google-cloud-aiplatform
+google-auth
+google-api-core
+requests
+protobuf
+pyyaml
+typing-extensions
